# yp-blog-project

./: .env  .gitignore  Cargo.toml  README.md
crates/blog-cli/: Cargo.toml
crates/blog-cli/src/: main.rs
crates/blog-client/: Cargo.toml  build.rs
crates/blog-client/src/: lib.rs  transport.rs
crates/blog-client/src/transport/: dto.rs  error.rs  grpc_client.rs  http_client.rs
crates/blog-server/: Cargo.toml  build.rs  docker-compose.yaml
crates/blog-server/.sqlx/: query-09297fe9cbc49f02be48833113a749971121f883491244b7894528915bd2a60b.json  query-18c90dda25cabc3a1a153e0da032e416a32959ae10d0de1fe22416cc64f2c640.json  query-3190a0973220a336ffc610b4b19b7b305ed346fefcba9c73ae9277a7fb8bb3db.json  query-3a1b3513b7013714906d02702da8de2d3b243be7197c2c06896d70d4aab95bc3.json  query-6f383586b40aefb43d5974b2a6a1790e3a01d8fda4f9e320c19f68abab5dc6dc.json  query-77a8153ec36bfc4be42a8fb8db4c38e45a605d6db3888897ee9a64da72d33a2c.json  query-c4b57f32c831df55aff9423d102ef43b9640819c1de473d9635471160a5a9ec4.json  query-f9bcf6b12ed1249e218229de13a2ab6b0efc05867be206f71151e3adbd1a9cad.json
crates/blog-server/migrations/: 20260608000001_create_users.sql  20260608000002_create_posts.sql
crates/blog-server/proto/: blog.proto
crates/blog-server/src/: main.rs
crates/blog-server/src/application/: auth_service.rs  blog_service.rs  mod.rs
crates/blog-server/src/data/: post_repository.rs  user_repository.rs
crates/blog-server/src/domain/: error.rs  post.rs  user.rs
crates/blog-server/src/infrastructure/: config.rs  logging.rs  mod.rs  security.rs
crates/blog-server/src/presentation/: dto.rs  middleware.rs  mod.rs
crates/blog-server/src/presentation/grpc/: blog_service.rs  mod.rs
crates/blog-server/src/presentation/handlers/: auth.rs  mod.rs  post.rs  protected.rs  public.rs
crates/blog-wasm/: Cargo.toml  index.html
crates/blog-wasm/src/: api.rs  lib.rs  main.rs
crates/blog-wasm/src/pages/: mod.rs  post.rs  posts.rs
