[workspace]
members = [
    "crates/blog-server",
    "crates/blog-client",
    "crates/blog-cli",
    "crates/blog-wasm",
]
resolver = "2" 

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono", "time"] }
uuid = { version = "1.23", features = ["serde"] }
