[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[lib]
name = "blog_client"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
enum_dispatch = "0.3"

[build-dependencies]
tonic-prost-build = { workspace = true }
