[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blog_server"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7"
actix-service = "2.0"
actix-web = "4.13"
actix-web-httpauth = "0.8"
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = { version = "10.4", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9", features = ["postgres", "chrono", "uuid", "macros", "runtime-tokio"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono", "time"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
