[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "blog_server"
path = "src/main.rs"

[dependencies]
actix-cors = "0.7"
actix-service = "2.0"
actix-web = "4.13"
actix-web-httpauth = "0.8"
anyhow = "1.0"
argon2 = { version = "0.5", features = ["std"] }
async-trait = "0.1"
chrono = { workspace = true }
dotenvy = "0.15"
jsonwebtoken = { version = "10.4", features = ["rust_crypto"] }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.9", features = ["postgres", "chrono", "uuid", "macros", "runtime-tokio"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
tonic-prost-build = { workspace = true }
